--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- <button class="btn bg-red-700 hover:bg-cyan-600">Default</button> -->
 
     <footer>
-        <p>&copy; 2025 Your Website Name. All rights reserved.</p>
+        <p>&copy; 2025 WOW German . All rights reserved.</p>
 
     </footer>
 </body>
